WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266497
[WebGPU] CTS test validation/buffer/mapping.html is failing
https://bugs.webkit.org/show_bug.cgi?id=266497
Summary
[WebGPU] CTS test validation/buffer/mapping.html is failing
Mike Wyrzykowski
Reported
2023-12-15 11:50:31 PST
[WebGPU] CTS test validation/buffer/mapping.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-15 11:50:44 PST
<
rdar://problem/119731119
>
Mike Wyrzykowski
Comment 2
2023-12-18 11:44:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21982
EWS
Comment 3
2023-12-28 17:19:50 PST
Committed
272526@main
(e0e9721a944e): <
https://commits.webkit.org/272526@main
> Reviewed commits have been landed. Closing PR #21982 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug