[WebGPU] CTS test validation/buffer/mapping.html is failing https://bugs.webkit.org/show_bug.cgi?id=266497 <radar://119731119>

Reviewed by Tadeu Zagallo.

Add correct validation for Buffer mapping.

With this change, all GPUBuffer CTS tests are passing.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/buffer/mapping-expected.txt:
* Source/WebCore/Modules/WebGPU/GPUBuffer.cpp:
(WebCore::GPUBuffer::GPUBuffer):
(WebCore::GPUBuffer::mapAsync):
(WebCore::containsRange):
(WebCore::GPUBuffer::getMappedRange):
(WebCore::GPUBuffer::internalUnmap):
(WebCore::GPUBuffer::destroy):
* Source/WebCore/Modules/WebGPU/GPUBuffer.h:
* Source/WebGPU/WebGPU/Buffer.h:
* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::Buffer::errorValidatingMapAsync const):
(WebGPU::Buffer::mapAsync):
(WebGPU::Buffer::validateUnmap const):
(WebGPU::Buffer::unmap):
(WebGPU::Buffer::validateMapAsync const): Deleted.
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteBuffer.cpp:
(WebKit::RemoteBuffer::mapAsync):
(WebKit::RemoteBuffer::unmap):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteBufferProxy.cpp:
(WebKit::WebGPU::RemoteBufferProxy::unmap):

Canonical link: https://commits.webkit.org/272526@main