Source/WebCore/Modules/WebGPU/GPUBuffer.cpp
@@ -45,7 +45,10 @@ GPUBuffer::GPUBuffer(Ref<WebGPU::Buffer>&& backing, size_t bufferSize, GPUBuffer
     , m_usage(usage)
     , m_mapState(mappedAtCreation ? GPUBufferMapState::Mapped : GPUBufferMapState::Unmapped)
     , m_device(device)
+    , m_mappedAtCreation(mappedAtCreation)
 {
+    if (mappedAtCreation)
+        m_mappedRangeSize = m_bufferSize;
 }
 
 String GPUBuffer::label() const
@@ -60,13 +63,8 @@ void GPUBuffer::setLabel(String&& label)
 
 void GPUBuffer::mapAsync(GPUMapModeFlags mode, std::optional<GPUSize64> offset, std::optional<GPUSize64> size, MapAsyncPromise&& promise)
 {
-    if (!m_bufferSize || (size.has_value() && !size.value())) {
-        promise.resolve(nullptr);
-        return;
-    }
-
     if (m_pendingMapPromise) {
-        promise.reject(Exception { ExceptionCode::OperationError });
+        promise.reject(Exception { ExceptionCode::OperationError, "pendingMapPromise"_s });
         return;
     }
 
@@ -75,20 +73,26 @@ void GPUBuffer::mapAsync(GPUMapModeFlags mode, std::optional<GPUSize64> offset, 
 
     m_pendingMapPromise = promise;
     // FIXME: Should this capture a weak pointer to |this| instead?
-    m_backing->mapAsync(convertMapModeFlagsToBacking(mode), offset.value_or(0), size, [promise = WTFMove(promise), protectedThis = Ref { *this }](bool success) mutable {
+    m_backing->mapAsync(convertMapModeFlagsToBacking(mode), offset.value_or(0), size, [promise = WTFMove(promise), protectedThis = Ref { *this }, offset, size](bool success) mutable {
         if (!protectedThis->m_pendingMapPromise) {
-            promise.resolve(nullptr);
+            if (protectedThis->m_destroyed)
+                promise.reject(Exception { ExceptionCode::OperationError, "buffer destroyed during mapAsync"_s });
+            else
+                promise.resolve(nullptr);
             return;
         }
 
         protectedThis->m_pendingMapPromise = std::nullopt;
         if (success) {
             protectedThis->m_mapState = GPUBufferMapState::Mapped;
+            protectedThis->m_mappedRangeOffset = offset.value_or(0);
+            protectedThis->m_mappedRangeSize = size.value_or(protectedThis->m_bufferSize - protectedThis->m_mappedRangeOffset);
             promise.resolve(nullptr);
         } else {
             if (protectedThis->m_mapState == GPUBufferMapState::Pending)
                 protectedThis->m_mapState = GPUBufferMapState::Unmapped;
-            promise.reject(Exception { ExceptionCode::OperationError });
+
+            promise.reject(Exception { ExceptionCode::OperationError, "map async was not successful"_s });
         }
     });
 }
@@ -102,16 +106,77 @@ static auto makeArrayBuffer(auto source, auto byteLength, auto& cachedArrayBuffe
     return arrayBuffer;
 }
 
-ExceptionOr<Ref<JSC::ArrayBuffer>> GPUBuffer::getMappedRange(std::optional<GPUSize64> offset, std::optional<GPUSize64> size)
+static bool containsRange(size_t offset, size_t endOffset, const auto& mappedRanges, const auto& mappedPoints)
 {
-    if (!m_bufferSize || (size.has_value() && !size.value()))
-        return makeArrayBuffer(static_cast<size_t>(0U), 1, m_arrayBuffer, m_device, *this);
+    if (offset == endOffset) {
+        if (mappedPoints.contains(offset))
+            return true;
 
-    // size is <= the size of the buffer is validated in WebGPU.framework
-    m_mappedRange = m_backing->getMappedRange(offset.value_or(0), size);
+        for (auto& range : mappedRanges) {
+            if (range.begin() < offset && offset < range.end())
+                return true;
+        }
+        return false;
+    }
+
+    if (mappedRanges.overlaps({ offset, endOffset }))
+        return true;
+
+    for (auto& i : mappedPoints) {
+        if (offset < i && i < endOffset)
+            return true;
+    }
+
+    return false;
+}
+
+ExceptionOr<Ref<JSC::ArrayBuffer>> GPUBuffer::getMappedRange(std::optional<GPUSize64> optionalOffset, std::optional<GPUSize64> optionalSize)
+{
+    if (m_mapState != GPUBufferMapState::Mapped || m_destroyed)
+        return Exception { ExceptionCode::OperationError, "not mapped or destroyed"_s };
+
+    auto offset = optionalOffset.value_or(0);
+    if (offset > m_bufferSize)
+        return Exception { ExceptionCode::OperationError, "offset > bufferSize"_s };
+
+    auto size = optionalSize.value_or(m_bufferSize - offset);
+    auto checkedEndOffset = checkedSum<uint64_t>(offset, size);
+    if (checkedEndOffset.hasOverflowed())
+        return Exception { ExceptionCode::OperationError, "has overflowed"_s };
+
+    auto endOffset = checkedEndOffset.value();
+    if (offset % 8)
+        return Exception { ExceptionCode::OperationError, "validation failed offset % 8"_s };
+
+    if (size % 4)
+        return Exception { ExceptionCode::OperationError, "validation failed size % 4"_s };
+
+    if (offset < m_mappedRangeOffset)
+        return Exception { ExceptionCode::OperationError, "validation failed offset < m_mappedRangeOffset"_s };
+
+    if (endOffset > m_mappedRangeSize + m_mappedRangeOffset)
+        return Exception { ExceptionCode::OperationError, "getMappedRangeFailed because offset + size > mappedRangeSize + mappedRangeOffset"_s };
+
+    if (endOffset > m_bufferSize)
+        return Exception { ExceptionCode::OperationError, "validation failed endOffset > bufferSie"_s };
+
+    if (containsRange(offset, endOffset, m_mappedRanges, m_mappedPoints))
+        return Exception { ExceptionCode::OperationError, "validation failed - containsRange"_s };
+
+    if (offset == endOffset)
+        m_mappedPoints.add(offset);
+    else {
+        m_mappedRanges.add({ static_cast<size_t>(offset), static_cast<size_t>(endOffset) });
+        m_mappedRanges.compact();
+    }
+
+    m_mappedRange = m_backing->getMappedRange(offset, size);
     if (!m_mappedRange.source) {
         m_arrayBuffer = nullptr;
-        return Exception { ExceptionCode::OperationError };
+        if (m_mappedAtCreation || !size)
+            return makeArrayBuffer(static_cast<size_t>(0U), 1, m_arrayBuffer, m_device, *this);
+
+        return Exception { ExceptionCode::OperationError, "getMappedRange failed"_s };
     }
 
     return makeArrayBuffer(m_mappedRange.source, m_mappedRange.byteLength, m_arrayBuffer, m_device, *this);
@@ -125,16 +190,19 @@ void GPUBuffer::unmap(ScriptExecutionContext& scriptExecutionContext)
 
 void GPUBuffer::internalUnmap(ScriptExecutionContext& scriptExecutionContext)
 {
+    m_mappedAtCreation = false;
+    m_mappedRangeOffset = 0;
+    m_mappedRangeSize = 0;
+    m_mappedRanges.clear();
+    m_mappedPoints.clear();
     if (m_pendingMapPromise) {
         m_pendingMapPromise->reject(Exception { ExceptionCode::AbortError });
         m_pendingMapPromise = std::nullopt;
     }
 
     m_mapState = GPUBufferMapState::Unmapped;
-    if (!m_bufferSize)
-        return;
 
-    if (m_arrayBuffer && m_arrayBuffer->data()) {
+    if (m_arrayBuffer && m_arrayBuffer->data() && m_mappedRange.byteLength) {
         memcpy(m_mappedRange.source, m_arrayBuffer->data(), m_mappedRange.byteLength);
         JSC::ArrayBufferContents emptyBuffer;
         m_arrayBuffer->unpin();
@@ -143,13 +211,12 @@ void GPUBuffer::internalUnmap(ScriptExecutionContext& scriptExecutionContext)
 
     m_arrayBuffer = nullptr;
     m_backing->unmap();
+    m_mappedRange = { nullptr, 0 };
 }
 
 void GPUBuffer::destroy(ScriptExecutionContext& scriptExecutionContext)
 {
-    if (!m_bufferSize)
-        return;
-
+    m_destroyed = true;
     internalUnmap(scriptExecutionContext);
     m_bufferSize = 0;
     m_backing->destroy();
